--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "prof-website",
   "version": "0.1.0",
+  "homepage": "https://melaniealocke.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
